--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@strudel/core": "^1.2.4",
-    "@strudel/mini": "^1.2.4",
+    "@strudel/core": "^1.2.5",
+    "@strudel/tonal": "^1.2.5",
+    "@strudel/mini": "^1.2.5",
     "@strudel/webaudio": "^1.2.5",
+    "@strudel/xen": "^1.2.5",
     "@xyflow/react": "^12.8.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -29,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "jsdom": "^27.2.0",
+    "@strudel/transpiler": "^1.2.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7",
