Add runtime tests for Strudel patterns (#10)

--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@strudel/core": "^1.2.4",
-    "@strudel/mini": "^1.2.4",
+    "@strudel/core": "^1.2.5",
+    "@strudel/mini": "^1.2.5",
+    "@strudel/tonal": "^1.2.5",
     "@strudel/webaudio": "^1.2.5",
+    "@strudel/xen": "^1.2.5",
     "@xyflow/react": "^12.8.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@strudel/transpiler": "^1.2.5",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
